<resources>
    <string name="app_name">Learning Esstenial English Words</string>
    <string name="audio_lessions">Audio Lessons</string>
    <string name="essential_words">Essential Words</string>
    <string name="exercises">Exercises</string>
    <string name="game">Game</string>
    <string name="favorite_words">Favorite Words</string>
    <string name="remind_words">Remind Words</string>
    <string name="settings">Settings</string>
    <string name="title_activity_essential_words_screen2">EssentialWordsScreen2</string>
</resources>
