<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#d5d2d2">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        android:fillViewport="true" >


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/ic_trending_flat_black"
                android:drawableLeft="@mipmap/ic_audiotrack_black_24dp"
                android:text="@string/audio_lessions"
                android:id="@+id/button"
                android:background="#ffffff"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"

                android:layout_marginTop="10dp" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/essential_words"
                android:drawableLeft="@mipmap/ic_assignment_black_24dp"
                android:drawableRight="@mipmap/ic_trending_flat_black"
                android:id="@+id/button2"
                android:background="#ffffff"
                android:layout_below="@+id/button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:layout_marginBottom="10dp"

                android:layout_marginTop="10dp"
                android:onClick="essentialWords"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercises"
                android:drawableLeft="@mipmap/ic_done_black_18dp"
                android:drawableRight="@mipmap/ic_trending_flat_black"
                android:id="@+id/button3"
                android:background="#ffffff"
                android:layout_below="@+id/button2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:layout_marginBottom="10dp"

                android:layout_marginTop="10dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game"
                android:drawableLeft="@mipmap/ic_games_black_24dp"
                android:drawableRight="@mipmap/ic_trending_flat_black"
                android:id="@+id/button4"
                android:background="#ffffff"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"

                android:layout_marginTop="10dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorite_words"
                android:drawableLeft="@mipmap/ic_star_rate_black_18dp"
                android:drawableRight="@mipmap/ic_trending_flat_black"
                android:id="@+id/button5"
                android:background="#ffffff"
                android:layout_above="@+id/button7"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"

                android:layout_marginTop="10dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remind_words"
                android:drawableLeft="@mipmap/ic_alarm_on_black_24dp"
                android:drawableRight="@mipmap/ic_trending_flat_black"
                android:id="@+id/button6"
                android:background="#ffffff"
                android:layout_below="@+id/button4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:layout_marginBottom="10dp"

                android:layout_marginTop="10dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:drawableLeft="@mipmap/ic_settings_black_18dp"
                android:drawableRight="@mipmap/ic_trending_flat_black"
                android:id="@+id/button7"
                android:background="#ffffff"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"

                android:layout_marginTop="10dp"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
